[package]
name = "kvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddc = "^0.2.2"

[target.'cfg(unix)'.dependencies]
ddc-i2c = "^0.2.1"

[target.'cfg(windows)'.dependencies]
ddc-winapi = { git = "https://github.com/arcnmx/ddc-winapi-rs" }